--- a/projects/todolist/src/app/core/core.styles.scss
+++ b/projects/todolist/src/app/core/core.styles.scss
@@ -1,9 +1,11 @@
 @import "./components/loading/loading.dialog.theme";
 @import "./containers/home/home.container.theme";
 @import "./containers/layout/layout.container.theme";
+@import "../todo/todo.styles";
 
 @mixin core-theme($theme) {
     @include app-loading-dialog-theme($theme);
     @include app-home-container-theme($theme);
     @include app-layout-container-theme($theme);
+  @include todo-theme($theme);
 }
