--- a/projects/todolist/src/app/todo/todo.styles.scss
+++ b/projects/todolist/src/app/todo/todo.styles.scss
@@ -1,5 +1,7 @@
 @import "./containers/entry/entry.container.theme";
+@import "./components/list/list.component.theme";
 
 @mixin todo-theme($theme) {
   @include app-entry-container-theme($theme);
+  @include app-list-component-theme($theme);
 }
