--- a/projects/todolist/src/app/todo/containers/entry/entry.container.html
+++ b/projects/todolist/src/app/todo/containers/entry/entry.container.html
@@ -1,3 +1,4 @@
 <div class="container" fxLayout="column" fxLayoutAlign="start stretch" fxFlexFill>
     <h1 class="mat-h1">The Entry container works great!</h1>
+    <app-list (actionEmitter)="dispatch($event)"></app-list>
 </div>
